# shield_trade_sys

./: .env  Cargo.toml  README.md
docs/: api.md  match.md  order.md  trading_engine_doc.md
script/: pg.sql
src/: error.rs  lib.rs  main.rs
src/adapter/: mod.rs
src/api/: matching.rs  mod.rs
src/clients/: matching.rs  mod.rs
src/common/: mod.rs  order_status.rs  response.rs  status.rs  user_id.rs
src/controller/: asset.rs  base.rs  mod.rs  order.rs
src/domain/request/: mod.rs  order_create_request.rs
src/infra/: mod.rs  postgresql.rs  redis.rs
src/matching/: matching_engine.rs  mod.rs  order_book.rs
src/models/: event_order_new.rs  mod.rs
src/repository/: asset.rs  asset_freezes.rs  asset_logs.rs  assets.rs  assets_freezes.rs  assets_logs.rs  base.rs  kline.rs  mod.rs  order.rs  order_auto_no.rs  trade.rs  trade_log.rs  trade_varieties.rs  trade_variety.rs  varieties.rs  variety.rs
src/service/: mod.rs  order.rs
src/types/: mod.rs
tests/: test.rs
tests/common_test/: mod.rs  order_status_test.rs
tests/service_test/: mod.rs  order_test.rs
