[package]
name = "ShieldTradeSys"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
async-trait = "0.1"
chrono = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.10"
log = "0.4"
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
