[package]
name = "shield_trade_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.72"
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.20"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "2.0"
serde_json = "1.0.108"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
jsonwebtoken = "8.1"
rust_decimal_macros = "1.36"
futures = "0.3.31"
dotenv = "0.15"
redis = "0.23.0"
idgen_rs = "0.1.6"
#rocketmq = "5.0.0"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"], default-features = false }
tracing-actix-web = "0.7.15"


